# research-vault

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  DEVLOG.md  LICENSE  README.md  REFERENCES.md  RELEASING.md  architecture.md  pyproject.toml
.githooks/: commit-msg  pre-commit
.github/workflows/: ci.yml  publish.yml
control/: acme.md
doctrine/: agent-charter.md  coordination.md  drift-watch.md  plan-critic-spec.md  review-board.md  standards.md  tooling.md
doctrine/roles/: ada.md  alfred.md  argus.md  atlas.md  iris.md  mason.md  wren.md
examples/demo-figures/: demo-figures.json
examples/demo-litreview/notes/mocs/: _PLACEHOLDER.md
examples/demo-research/: README.md  research-loop.json
examples/demo-research/notes/experiments/: _PLACEHOLDER.md
examples/demo-research/notes/findings/: _PLACEHOLDER.md
scripts/: ci_dogfood_checks.sh  leakage_scan.sh  migrate_okf_edge_prose_token.py  migrate_okf_pr2_central_bundle.py  migrate_overlay_unwind.py  release_gate_canary.sh
src/research_vault/: __init__.py  approval.py  bootstrap.py  build_agents.py  check.py  cite.py  cli.py  cli_removed_verbs.py  code_check.py  compute.py  compute_wizard.py  config.py  control.py  controllib.py  cross_project.py  devlog.py  doctor.py  experiment.py  experiment_run.py  figure.py  fulltext.py  git_discipline.py  git_health.py  gitlib.py  hashing.py  init.py  keys.py  lint.py  literature.py  mdstore.py  note.py  observability_cli.py  onboard.py  orient.py  plugins.py  project.py  project_edges.py  research.py  result.py  richui.py  (+10 more)
src/research_vault/adapters/: __init__.py  base.py  github_ci.py  model_client.py  observability.py  remote.py  secret_forward.py
src/research_vault/dag/: __init__.py  approval.py  brief.py  catalog.py  reads.py  schema.py  store.py  verbs.py  walker.py
src/research_vault/data/doctrine/: agent-charter.md  code-conventions.md  compute-run-recipe.md  coordination.md  crew-cannot-self-approve.md  devlog-journal.md  figure-minimalism.md  git-discipline.md  harness-contract.md  honesty-gates.md  manuscript-loop.md  memory-management.md  note-conventions.md  plan-critic-spec.md  project-structure.md  review-board.md  standards.md  tooling.md
src/research_vault/data/doctrine/roles/: alfred.md  architect.md  argus.md  atlas.md  designer.md  engineer.md  iris.md  manager.md  mason.md  researcher.md  reviewer.md  wren.md
src/research_vault/data/examples/demo-litreview/: CONTRACT.md  README.md  corroborate-judge-fragment.json  lit-review-loop.json
src/research_vault/data/examples/demo-litreview/notes/concepts/: _PLACEHOLDER.md
src/research_vault/data/examples/demo-litreview/notes/literature/: _PLACEHOLDER.md  jones2023.md  smith2024.md
src/research_vault/data/examples/demo-research/: CONTRACT.md  README.md  research-loop.json
src/research_vault/data/examples/literature/: _README.md  jones2023.md  smith2024.md
src/research_vault/data/exemplars/manuscript/lit-review/: e01-framework-pipeline.md  e02-framework-evolution-arc.md  e03-framework-arc-defense.md  e04-framework-n-axis.md  e05-framework-coupled-taxonomies.md  e06-framework-shape-defense.md  e07-synthesis-theme-claim.md  e08-synthesis-collective-insight.md  e09-figure-caption-comparison.md  e10-figure-caption-organizing-structure.md  e11-comparison-head-to-head.md  e12-comparison-shared-axes.md  e13-gap-incompatibility-result.md  e14-gap-entailed-by-structure.md  e15-scope-method-prisma-protocol.md  e16-scope-method-coverage-adequacy.md  e17-principle-synthesis-vs-cataloguing.md  e18-principle-structure-comparison.md
src/research_vault/data/templates/: CLAUDE.md.tmpl  CONTRACT.md.tmpl  QUICKSTART.md  manuscript.tex
src/research_vault/figures/: __init__.py  recommend.py  render_script.py  style.py
src/research_vault/gates/: __init__.py  _llm.py  board_seam.py  canary_passages.py  coldread.py  judge_seam.py  support_matcher.py
src/research_vault/manuscript/: __init__.py  appendix.py  bib.py  board.py  board_ledger.py  board_lenses.py  check_gates.py  citation_pattern.py  coldread.py  compile.py  draft_files.py  equations.py  exemplars.py  fidelity_gates.py  naked_cite.py  results_inject.py  review_board.py  style.py  support_matcher.py  verbs.py
src/research_vault/manuscript/types/: __init__.py  lit_review.py
src/research_vault/plan/: __init__.py  check.py  freeze.py  style.py  verbs.py
src/research_vault/retrieval/: map.py  router.py  stop.py  traverse.py
src/research_vault/review/: __init__.py  autonomy.py  corpus_bound.py  corpus_freeze.py  counter_facet_guard.py  facet_remediation.py  gap_coverage_gate.py  gap_scan.py  incremental_relate.py  ledger.py  relate_check.py  relate_judge_seam.py  relevance.py  remediation.py  style.py  verbs.py
src/research_vault/skills/research-pipeline/: SKILL.md
src/research_vault/sources/: __init__.py  annotate.py  arxiv.py  base.py  dedup.py  derivative.py  enrich.py  identifiers.py  openalex.py  pubmed.py  ranker.py  registry.py  semantic_scholar.py  snowball.py  sweep.py
tests/: conftest.py  gitutil.py  test_a1_rerank_persistence.py  test_adapters.py  test_approve_gate.py  test_board_disposition_b5.py  test_board_ledger_b4.py  test_board_lens_split_pr_e.py  test_board_orchestration_b3.py  test_board_seam_b1_b2.py  test_citation_pattern_shared.py  test_cite_keys.py  test_citekey_parity_fix.py  test_citekey_pipeline.py  test_cli.py  test_code_check.py  test_compute_wizard.py  test_config.py  test_control.py  test_corpus_bound.py  test_corpus_bound_dag_wiring.py  test_corroborate_judge_seam.py  test_coverage_allocation_wiring.py  test_coverage_gap_emission.py  test_coverage_gate_walk_absent.py  test_cross_project.py  test_dag.py  test_dag_adopter_fixes.py  test_dag_approve_auto.py  test_dag_brief.py  test_dag_disp.py  test_dag_redo.py  test_dag_retry.py  test_dag_scope.py  test_dag_tool_node.py  test_datasets_note.py  test_devlog.py  test_dogfood_med_batch.py  test_experiment_run.py  test_facet_coverage_0_3_2.py  (+190 more)
tests/fixtures/: corpus_real_shape_slice.md  find_rerank_llm_cultural_values.json
(+15 files in other folders)
